  107 Luca Falavigna	2008-08-07
      Move away from globals.py

  106 Luca Falavigna	2008-08-07
      Code reorganization, some files merged

  105 Luca Falavigna	2008-06-30
      Fix typos in documentation



Thu 2008-06-26 21:15:06 +0200
Stable release: 0.5

  104 Luca Falavigna	2008-06-26
      Makefile revisited

  103 Luca Falavigna	2008-06-25
      Relicense under GPL version 3

  102 Luca Falavigna	2008-06-25
      Remove linda support, software is obsolete

  101 Luca Falavigna	2008-04-28
      Documentation improved

  100 Luca Falavigna	2008-04-26
      Add Intrepid pbuilder configuration file, remove Gutsy one

   99 Luca Falavigna	2008-04-26
      Add missing options in debomatic.conf.5.docbook

   98 Luca Falavigna	2008-04-26
      Add CHANGES file

   97 Luca Falavigna	2008-03-19
      Remove GPG signature from publicly available .changes files

   96 Luca Falavigna	2008-03-16
      Added rm_package function

   95 Luca Falavigna	2008-03-16
      Add GPG support to check signed source.changes files

   94 Luca Falavigna	2008-03-16
      Add support for checks section in configure file

   93 Luca Falavigna	2008-03-04
      Check return status of the functions

   92 Luca Falavigna	2008-02-18
      Update copyright informations and FSF postal address

   91 Luca Falavigna	2008-02-17
      Download missing files from MIRRORSITE. This way it is no strictly
      necessary including original tarball in the upload each time.

   90 Luca Falavigna	2007-12-09
      Really release the semaphore in pbuilderlock_release

   89 Luca Falavigna	2007-12-02
      Check pbuilder status after locking pbuilderlock

   88 Luca Falavigna	2007-11-29
      Make debomatic executable



Thu 2007-11-29 22:01:35 +0100
Stable release: 0.4

   87 Luca Falavigna	2007-11-29
      Remove redundant call to add_package

   86 Luca Falavigna	2007-11-29
      Remove Debomatic modules directory during uninstall

   85 Luca Falavigna	2007-11-28
      Correct typo in author_email
