@@ -1,4 +1,4 @@
 DISTRIBUTION=intrepid
 MIRRORSITE=http://archive.ubuntu.com/ubuntu
 COMPONENTS="main restricted universe multiverse"
-
+DEBOOTSTRAP=debootstrap
